FIx too narrow

--- a/jsViewHKL.css
+++ b/jsViewHKL.css
@@ -2,7 +2,7 @@
 
 div {
     padding:10px;
-    width:600px;
+    /*width:600px;*/
     background:#fff;
 }
 
@@ -28,8 +28,11 @@ div {
 
 .table-blue {
   font-family     : "Trebuchet MS", Arial, Helvetica, sans-serif;
-  /*  width           : 100%;  */
+  width           : 100%;
   border-collapse : collapse;
+  text-align      : center;
+  padding         : 5px 9px 4px 9px;
+  border          : 1px solid #488090;
   box-shadow      : 5px 5px 6px #888888;
 }
 .table-blue-hh {
